--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>I am an eighth cycle student of the Economics degree at the Pontifical Catholic University of Peru (PUCP). My academic training focuses on key areas such as macroeconomics, data analysis, international trade, finance and econometrics. I seek opportunities to apply and expand my knowledge in a dynamic and challenging professional environment.</p>
         </div>
 
         <div class="row">
