--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/Foto_principal.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/Foto_personal.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Anthony Mamani</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -70,7 +70,7 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
-    <div class="hero-container" data-aos="fade-in">
+    <div class="Fondo_PUCP.jpg" data-aos="fade-in">
       <h1>  My name is Anthony Mamani</h1>
       <p>I'm <span class="typed" data-typed-items="Economist, Data Analyst"></span></p>
     </div>
