--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
-    <div class="hero-cotainer" data-aos="fade-in">
+    <div class="hero-container" data-aos="fade-in">
       <h1>  My name is Anthony Mamani</h1>
       <p>I'm <span class="typed" data-typed-items="Economist, Data Analyst"></span></p>
     </div>
