--- a/index.html
+++ b/index.html
@@ -196,19 +196,19 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>I am an eighth cycle student of the Economics program at the Pontifical Catholic University of Peru. During my academic path inside and outside the university I have taken courses that allow me better management and development with respect to my areas of interest. Programming courses such as Python, MATLAB, SQL Server and Excel. Additionally, I have studied an essential language in the world of work, which is English.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
-              <h4>Alex Smith</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <h4>Anthony Mamani</h4>
+              <p><em>I have been studying Economics at PUCP for around 4 years. Within which I have also sought to develop my skills regarding programs, to form my knowledge as a data analyst, seeking to obtain mastery in the area of data science.</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>San Miguel, Lima, Peru</li>
+                <li>+51 923397214</li>
+                <li>anthonymamani55@gmail.com</li>
               </ul>
             </div>
 
