--- a/index.html
+++ b/index.html
@@ -214,16 +214,16 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>Bachelor's degree in economics</h4>
+              <h5>2020 - Present</h5>
+              <p><em>Pontifical Catholic University of Peru (PUCP), PE</em></p>
+              <p>Development in key courses, such as microeconomics, econometrics, inferential statistics, international trade, monetary economics and financial analysis.</p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>Econometrics laboratory: MATLAB</h4>
+              <h5>2023 - 2023</h5>
+              <p><em>Pontifical Catholic University of Peru (PUCP), PE</em></p>
+              <p>Development using MATLAB at an intermediate level, knowledge in the use of econometric models such as OLS, VAR, SVAR, VEC, ARCH, GARCH.</p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
