--- a/index.html
+++ b/index.html
@@ -231,21 +231,26 @@
             <div class="resume-item">
               <h4>Intermediate SQL Server</h4>
               <h5>2024 - 2024</h5>
-              <p><em>WE Executive Education </em></p>
+              <p><em>WE Executive Education, PE</em></p>
               <ul>
                 <li>Knowledge of working with large databases, use of joins, views, grouped indexes, lead and lag.</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Intermediate Excel</h4>
+              <h5>2024 - 2024</h5>
+              <p><em>WE Executive Education, PE</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Knowledge in the management and creation of dynamic tables; application of simple and advanced filters; use of data validation; Knowledge of macros and dashboards.</li>
               </ul>
+             </div>
+            <div class="resume-item">
+              <h4>Intermediate Excel</h4>
+              <h5>2024 - 2024</h5>
+              <p><em>WE Executive Education, PE</em></p>
+              <ul>
+                <li>Knowledge in the management and creation of dynamic tables; application of simple and advanced filters; use of data validation; Knowledge of macros and dashboards.</li>
+              </ul> 
             </div>
           </div>
         </div>
