--- a/index.html
+++ b/index.html
@@ -245,11 +245,11 @@
               </ul>
              </div>
             <div class="resume-item">
-              <h4>Intermediate Excel</h4>
+              <h4>Python programming fundamentals for macroeconomics and finance.</h4>
               <h5>2024 - 2024</h5>
-              <p><em>WE Executive Education, PE</em></p>
+              <p><em>QLAB (PUCP), PE</em></p>
               <ul>
-                <li>Knowledge in the management and creation of dynamic tables; application of simple and advanced filters; use of data validation; Knowledge of macros and dashboards.</li>
+                <li>Essential knowledge in the use of Python, concepts such as variables, functions, loops, and conditionals, libraries and modules to perform tasks like data analysis and scientific computing, use Python to Interact with Web APIs and Scrape Web Pages.</li>
               </ul> 
             </div>
           </div>
