--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Services Section ======= -->
-    <section id="services" class="services">
+<!--     <section id="services" class="services">
       <div class="container">
 
         <div class="section-title">
@@ -418,7 +418,7 @@
         </div>
 
       </div>
-    </section><!-- End Services Section -->
+    </section><!-- End Services Section --> -->
 
     <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials section-bg">
