--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
     </section><!-- End Services Section --> -->
 
     <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials section-bg">
+<!--     <section id="testimonials" class="testimonials section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -502,7 +502,7 @@
         </div>
 
       </div>
-    </section><!-- End Testimonials Section -->
+    </section><!-- End Testimonials Section --> -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
