--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
       </div>
     </section><!-- End Services Section --> -->
 
-    <!-- ======= Testimonials Section ======= -->
+<!--     <!-- ======= Testimonials Section ======= -->
 <!--     <section id="testimonials" class="testimonials section-bg">
       <div class="container">
 
@@ -501,7 +501,7 @@
           <div class="swiper-pagination"></div>
         </div>
 
-      </div>
+      </div> -->
     </section><!-- End Testimonials Section --> -->
 
     <!-- ======= Contact Section ======= -->
