--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
         </div>
 
       </div>
-    </section><!-- End Services Section --> -->
+    </section><!-- End Services Section --> 
 
 
 
