--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         <img src="assets/img/Foto_personal.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Anthony Mamani</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="https://www.youtube.com/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.facebook.com/anthonyperdro.mamaninavarro" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.instagram.com/anthony_mnv/" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/anthony-pedro-mamani-navarro/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
