--- a/index.html
+++ b/index.html
@@ -284,9 +284,9 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <h4>Trabajo Tesis</h4>
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Efecto de la tasa de interes de USA"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <h4>Thesis work</h4>
+                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Effect of the US interest rate on the real exchange rate in the countries of the Pacific Alliance"><i class="bx bx-plus"></i></a>
+                <a href="https://drive.google.com/file/d/19c2LkeEjYLaQGDBhxAbEiiBfllM93alw/view?usp=sharing" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -295,8 +295,9 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <h4>Econometrics work</h4>
+                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Discrimination by Sex in the Labor Market in Junin"><i class="bx bx-plus"></i></a>
+                <a href="https://drive.google.com/file/d/1s_GP6J08kt_EHgn74-in4C-6sLR5YQV1/view?usp=sharing" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -305,8 +306,9 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <h4>Financial analysis</h4>
+                <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Financial analysis Cementos Pacasmayo S.A.A"><i class="bx bx-plus"></i></a>
+                <a href="https://drive.google.com/file/d/1LqLEvte-vcw4psuPjSWZa8kWYWBqB00P/view?usp=sharing" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -315,8 +317,9 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <h4>International Trade</h4>
+                <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="China-Peru free trade agreement"><i class="bx bx-plus"></i></a>
+                <a href="https://drive.google.com/file/d/1EH3TyjU9hIiTUrEJKU268fo1V2EnBkdz/view?usp=sharing" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -325,13 +328,14 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <h4>MATLAB Paper</h4>
+                <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Impacto del tipo de cambio real en el volumen de importaciones y exportaciones para la Alianza del Pacífico (1980-2022)"><i class="bx bx-plus"></i></a>
+                <a href="https://drive.google.com/file/d/1v95vCk255msrbTNN5wNHScwCQQCj9YNO/view?usp=sharing" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -339,7 +343,7 @@
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
-          </div>
+          </div> -->
 
 <!--           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
