--- a/index.html
+++ b/index.html
@@ -293,10 +293,10 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/discriminacion-genero.png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <h4>Econometrics work</h4>
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Discrimination by Sex in the Labor Market in Junin"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/discriminacion-genero.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Discrimination by Sex in the Labor Market in Junin"><i class="bx bx-plus"></i></a>
                 <a href="https://drive.google.com/file/d/1s_GP6J08kt_EHgn74-in4C-6sLR5YQV1/view?usp=sharing" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -304,10 +304,10 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/1613999763wE6hujJU.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <h4>Financial analysis</h4>
-                <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Financial analysis Cementos Pacasmayo S.A.A"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/1613999763wE6hujJU.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Financial analysis Cementos Pacasmayo S.A.A"><i class="bx bx-plus"></i></a>
                 <a href="https://drive.google.com/file/d/1LqLEvte-vcw4psuPjSWZa8kWYWBqB00P/view?usp=sharing" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -315,10 +315,10 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+              <img src="assets/img/IDEXCAM-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <h4>International Trade</h4>
-                <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="China-Peru free trade agreement"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/IDEXCAM-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="China-Peru free trade agreement"><i class="bx bx-plus"></i></a>
                 <a href="https://drive.google.com/file/d/1EH3TyjU9hIiTUrEJKU268fo1V2EnBkdz/view?usp=sharing" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -326,10 +326,10 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+              <img src="assets/img/MATLAB-Symbol.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <h4>MATLAB Paper</h4>
-                <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Impacto del tipo de cambio real en el volumen de importaciones y exportaciones para la Alianza del Pacífico (1980-2022)"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/MATLAB-Symbol.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Impacto del tipo de cambio real en el volumen de importaciones y exportaciones para la Alianza del Pacífico (1980-2022)"><i class="bx bx-plus"></i></a>
                 <a href="https://drive.google.com/file/d/1v95vCk255msrbTNN5wNHScwCQQCj9YNO/view?usp=sharing" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
