--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am an eighth cycle student of the Economics degree at the Pontifical Catholic University of Peru (PUCP). My academic training focuses on key areas such as macroeconomics, data analysis, international trade, finance and econometrics. I seek opportunities to apply and expand my knowledge in a dynamic and challenging professional environment.</p>
+          <p>I am an ninth cycle student of the Economics degree at the Pontifical Catholic University of Peru (PUCP). My academic training focuses on key areas such as macroeconomics, data analysis, international trade, finance and econometrics. I seek opportunities to apply and expand my knowledge in a dynamic and challenging professional environment.</p>
         </div>
 
         <div class="row">
@@ -170,9 +170,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Power Bi<i class="val">50%</i></span>
+              <span class="skill">Power Bi<i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -196,7 +196,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>I am an eighth cycle student of the Economics program at the Pontifical Catholic University of Peru. During my academic path inside and outside the university I have taken courses that allow me better management and development with respect to my areas of interest. Programming courses such as Python, MATLAB, SQL Server and Excel. Additionally, I have studied an essential language in the world of work, which is English.</p>
+          <p>I am an ninth cycle student of the Economics program at the Pontifical Catholic University of Peru. During my academic path inside and outside the university I have taken courses that allow me better management and development with respect to my areas of interest. Programming courses such as Python, MATLAB, SQL Server and Excel. Additionally, I have studied an essential language in the world of work, which is English.</p>
         </div>
 
         <div class="row">
@@ -237,9 +237,9 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Intermediate Excel</h4>
+              <h4>Excel Skills for Business: Adavanced</h4>
               <h5>2024 - 2024</h5>
-              <p><em>WE Executive Education, PE</em></p>
+              <p><em>Macquarie University, AUS</em></p>
               <ul>
                 <li>Knowledge in the management and creation of dynamic tables; application of simple and advanced filters; use of data validation; Knowledge of macros and dashboards.</li>
               </ul>
