--- a/index.html
+++ b/index.html
@@ -252,6 +252,14 @@
                 <li>Essential knowledge in the use of Python, concepts such as variables, functions, loops, and conditionals, libraries and modules to perform tasks like data analysis and scientific computing, use Python to Interact with Web APIs and Scrape Web Pages.</li>
               </ul> 
             </div>
+            <div class="resume-item">
+              <h4>Programming laboratory: R and Python</h4>
+              <h5>2024 - 2024</h5>
+              <p><em>Pontifical Catholic University of Peru (PUCP), PE</em></p>
+              <ul>
+                <li>Essential knowledge in the use of Python. Conducting data analysis of macroeconomic and microeconomic databases, cleaning and organizing data, creation of predictive machine learning models, both regression and classification.</li>
+              </ul> 
+            </div>
           </div>
         </div>
 
